[tool.poetry]
name = "blarify"
version = "0.1.6"
description = "A simple graph builder based on LSP calls"
authors = ["Juan Vargas <juan@blar.io>", "Benjamín Errazuriz <benjamin@blar.io>"]
readme = "README.md"
homepage = "https://blar.io"
repository = "https://github.com/blarApp/code-base-agent"
license = "MIT"
packages = [{include = "blarify"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.14"
asyncio = "^3.4.3"
websockets = "^13.1"
neo4j = "^5.25.0"
python-dotenv = "^1.0.1"
tree-sitter = "^0.23.2"
tree-sitter-python = "^0.23.2"
tree-sitter-ruby = "^0.23.0"
tree-sitter-javascript = "^0.23.0"
tree-sitter-typescript = "^0.23.2"
tree-sitter-c-sharp = "^0.23.1"
multilspy = {git = "https://github.com/blarApp/multilspy.git"}
tree-sitter-go = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.codespell]
check-filenames = true
check-hidden = true
skip = "*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.isort]
profile = "black"
